# obs-move-transition

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  audio-move.c  buildspec.json  easing.c  easing.h  installer.iss.in  move-action-filter.c  move-directshow-filter.cpp  move-filter.c  move-source-filter.c  move-source-swap-filter.c  move-transition-override-filter.c  move-transition.c  move-transition.h  move-transition.rc  move-value-filter.c  nvar-load.h  nvidia-move-filter.c  resource.rc.in  version.h.in
.github/: FUNDING.yml
.github/actions/build-plugin/: action.yaml
.github/scripts/: Package-Windows.ps1
.github/scripts/utils.zsh/: check_packages
.github/workflows/: build-project.yaml  build.yml  check-format.yaml
CI/macos/: move-transition.pkgproj  obs-move-transition.pkgproj
build-aux/: .run-format.zsh
cmake/: ObsPluginHelpers.cmake
cmake/common/: bootstrap.cmake
cmake/windows/resources/: installer-Windows.iss.in
data/effects/: unorm.effect
data/locale/: de-DE.ini  en-US.ini  es-ES.ini  nl-NL.ini  pt-BR.ini  ru-RU.ini  zh-CN.ini
